--- a/OpenAI Chat App.ipynb
+++ b/OpenAI Chat App.ipynb
@@ -10,6 +10,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "f92fbb4f-b553-405c-ac3e-b28cb297393a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# !pip install gradio"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "id": "4617b7cc-e788-47c3-9fa2-0e7741f99c2a",
    "metadata": {},
@@ -23,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "ee668c72-1108-47af-8b6e-cc814da871ab",
    "metadata": {},
    "outputs": [
@@ -41,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "d424b7c8-34b1-495d-af4c-7f326849bc83",
    "metadata": {},
    "outputs": [
@@ -50,8 +60,6 @@
      "output_type": "stream",
      "text": [
       "Running on local URL:  http://127.0.0.1:7861\n",
-      "IMPORTANT: You are using gradio version 4.12.0, however version 4.29.0 is available, please upgrade.\n",
-      "--------\n",
       "\n",
       "To create a public link, set `share=True` in `launch()`.\n"
      ]
@@ -72,7 +80,7 @@
      "data": {
       "text/plain": []
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,7 +145,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
