--- a/Weather App.ipynb
+++ b/Weather App.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "46392f2c-14e1-4e58-b264-bdada668a9b1",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "f1798f14-4b24-48d6-a5ac-a7f8084104d7",
    "metadata": {},
    "outputs": [
@@ -40,13 +40,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "37878d86-cfb1-4dde-a231-8e4492407f8e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1916809924.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[3], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    pip install langchain\u001b[0m\n\u001b[0m        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
-    "# pip install langchain\n",
-    "# pip install langchain-openai"
+    "pip install langchain\n",
+    "pip install langchain-openai"
    ]
   },
   {
@@ -64,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "63dccaa3-862b-40db-8fd8-5a7a3b13387a",
    "metadata": {},
    "outputs": [],
@@ -74,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "2023e62a-262a-43e9-b3e6-5c2f0bcb34cd",
    "metadata": {},
    "outputs": [
@@ -91,11 +100,13 @@
     "\n",
     "BASE_URL = \"http://api.openweathermap.org/data/2.5/weather\"\n",
     "\n",
+    "openweather_api_key = os.environ[\"OPENWEATHER_API_KEY\"]\n",
+    "\n",
     "def get_weather_data(location: str) -> dict:\n",
     "    \"\"\"Fetch weather data from OpenWeatherMap API.\"\"\"\n",
     "    params = {\n",
     "        \"q\": location,\n",
-    "        \"appid\": OPENWEATHER_API_KEY,\n",
+    "        \"appid\": openweather_api_key,\n",
     "        \"units\": \"metric\"\n",
     "    }\n",
     "    response = requests.get(BASE_URL, params=params)\n",
@@ -104,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "1a79aa9c-c41a-43dc-8b1c-1f3f345241cb",
    "metadata": {},
    "outputs": [],
@@ -118,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "id": "279aa7e4-2f15-436b-a71d-29dc7665ab65",
    "metadata": {},
    "outputs": [],
@@ -134,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "884894c4-b686-4e97-b485-1f8e82c7392f",
    "metadata": {},
    "outputs": [
@@ -142,15 +153,15 @@
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Enter a location:  Pasadena, ca\n"
+      "Enter a location:  Pasadena, CA\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Weather forecast for Pasadena, ca:\n",
-      "Hello! In Pasadena, CA, today's weather is quite cozy with an overcast sky and a temperature sitting at around 22.9°C (feels like 23.8°C). Humidity levels are high at 96%, so it might feel a bit muggy. The gentle breeze is coming from the south at about 2.85 m/s. Overall, it's a great day to enjoy indoor activities or a nice walk under the clouds. Stay comfy! 🌥️\n"
+      "Weather forecast for Pasadena, CA:\n",
+      "Hello there! In Pasadena, CA, today’s weather is quite mild with a temperature of around 28°C (feels like 27°C). We’re experiencing overcast skies, so it might look a bit gloomy out there. The humidity is at 38%, making it feel comfortable overall. A gentle breeze is blowing from the southwest at about 2 km/h. Enjoy your day, and maybe keep an umbrella handy just in case! 🌥️\n"
      ]
     }
    ],
@@ -169,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19cf23f2-f404-4391-9279-dc20be7af684",
+   "id": "67a37c47-c949-44ce-99de-b7030c8258fc",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -191,7 +202,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
