--- a/Whisper.ipynb
+++ b/Whisper.ipynb
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "fe189ba0-d62d-420e-8242-e53d9d677c61",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,7 @@
      "text": [
       "\n",
       "German translation:\n",
-      "Alan Turing war ein Pionier in der britischen Mathematik, Logik und Informatik, der weithin als der Vater der theoretischen Informatik und der künstlichen Intelligenz angesehen wird. Seine wegweisende Arbeit während des Zweiten Weltkriegs im Bletchley Park, insbesondere bei der Entwicklung der Bombe zur Entschlüsselung der Enigma-Codes, trug erheblich zur Kriegsanstrengung der Alliierten bei. Turings theoretische Beiträge, einschließlich des Konzepts der Turing-Maschine und des Turing-Tests, legten das Fundament für modernes Rechnen und künstliche Intelligenz.\n"
+      "Alan Turing war ein wegweisender britischer Mathematiker, Logiker und Computerwissenschaftler, der allgemein als Vater der theoretischen Informatik und der künstlichen Intelligenz angesehen wird. Seine bahnbrechende Arbeit während des Zweiten Weltkriegs im Bletchley Park, insbesondere die Entwicklung der Bombe zur Entschlüsselung der Enigma-Codes, trug erheblich zur Kriegsanstrengung der Alliierten bei. Turings theoretische Beiträge, einschließlich des Konzepts der Turing-Maschine und des Turing-Tests, legten die Grundlagen für modernes Rechnen und künstliche Intelligenz.\n"
      ]
     }
    ],
@@ -118,7 +118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
