--- a/Sentiment Analysis.ipynb
+++ b/Sentiment Analysis.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "8227ad84-2dd5-4f0a-877f-76c93d3b5703",
    "metadata": {},
    "outputs": [],
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "fb90f22d-550d-4170-ac57-5cf4433eb8de",
    "metadata": {},
    "outputs": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "b2995ea0-1685-4807-b591-6ab54dbc7698",
    "metadata": {
     "scrolled": true
@@ -52,21 +52,21 @@
      "output_type": "stream",
      "text": [
       "Sentiment Analysis Results:\n",
-      "The product exceeded my expectations. I'm thrilled with my purchase! | positive | 😊\n",
-      "I'm not sure how I feel about this. It's okay, I guess. | neutral | 😐\n",
-      "This is the worst customer service I've ever experienced. Extremely disappointing. | negative | 😞\n",
-      "The quality is decent, but the price is a bit high for what you get. | neutral | 😐\n",
-      "Absolutely love it! Can't imagine my life without this product now. | positive | 😍\n",
-      "It does the job, nothing more, nothing less. | neutral | 😐\n",
-      "I had high hopes, but unfortunately, it didn't meet my needs at all. | negative | 😞\n",
-      "The shipping was fast, but the packaging could use some improvement. | neutral | 😐\n",
-      "Meh, it's alright. Not great, not terrible. | neutral | 😐\n",
-      "I'm blown away by the attention to detail. Truly a premium product! | positive | 😍\n",
-      "It broke after just two weeks of use. Very frustrating. | negative | 😞\n",
-      "The user manual was confusing, but the product itself works fine. | neutral | 😐\n",
-      "I've had better, I've had worse. It's just average. | neutral | 😐\n",
-      "Outstanding value for money. I'd buy it again in a heartbeat! | positive | 😊\n",
-      "The customer support team was helpful, but the product is still disappointing. | negative | 😞\n"
+      "The product exceeded my expectations. I'm thrilled with my purchase! | 1. Positive | 😊\n",
+      "I'm not sure how I feel about this. It's okay, I guess. | 2. Neutral | 😐\n",
+      "This is the worst customer service I've ever experienced. Extremely disappointing. | 3. Negative | 😡\n",
+      "The quality is decent, but the price is a bit high for what you get. | 4. Neutral | 🤷\n",
+      "Absolutely love it! Can't imagine my life without this product now. | 5. Positive | ❤️\n",
+      "It does the job, nothing more, nothing less. | 6. Neutral | 😶\n",
+      "I had high hopes, but unfortunately, it didn't meet my needs at all. | 7. Negative | 😞\n",
+      "The shipping was fast, but the packaging could use some improvement. | 8. Neutral | 📦\n",
+      "Meh, it's alright. Not great, not terrible. | 9. Neutral | 😅\n",
+      "I'm blown away by the attention to detail. Truly a premium product! | 10. Positive | 🌟\n",
+      "It broke after just two weeks of use. Very frustrating. | 11. Negative | 😤\n",
+      "The user manual was confusing, but the product itself works fine. | 12. Neutral | 📖\n",
+      "I've had better, I've had worse. It's just average. | 13. Neutral | 🤔\n",
+      "Outstanding value for money. I'd buy it again in a heartbeat! | 14. Positive | 💰\n",
+      "The customer support team was helpful, but the product is still disappointing. | 15. Neutral | 🙁\n"
      ]
     }
    ],
@@ -80,7 +80,7 @@
     "    with open(file_path, 'r') as csvfile:\n",
     "        return [row[0] for row in csv.reader(csvfile)][1:]  # Skip header\n",
     "\n",
-    "def analyze_sentiments(comments, model=\"gpt-3.5-turbo\"):\n",
+    "def analyze_sentiments(comments, model=\"gpt-4o-mini\"):\n",
     "    system_content = \"\"\"Analyze the sentiment of each comment. For each, provide:\n",
     "    1. The sentiment (positive, negative, or neutral)\n",
     "    2. An appropriate emoji\n",
@@ -141,7 +141,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
