--- a/Vision.ipynb
+++ b/Vision.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "5762e4df-55d1-4f07-83f2-003f39fe192a",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "id": "735ee58f-586c-4f76-9d83-c8fe27ccf29e",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "6fadd3a2-0595-4641-ae0f-c86886873959",
    "metadata": {},
    "outputs": [
@@ -48,7 +48,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The image depicts a full moon in space, showing its surface details such as craters and textures, with a backdrop of stars. It captures the moon's bright, round appearance against the dark space surrounding it.\n"
+      "The image depicts the Moon, showing its surface features such as craters and maria against a black background filled with stars. It's a clear representation of the lunar surface, highlighting its texture and details.\n"
      ]
     }
    ],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "557d6b71-eca7-40b0-b64d-8e578951fce2",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'id': 'chatcmpl-9qrDJdBKEvk0TdhqNUg9F4KwnqRlT', 'object': 'chat.completion', 'created': 1722384637, 'model': 'gpt-4o-mini-2024-07-18', 'choices': [{'index': 0, 'message': {'role': 'assistant', 'content': 'The image depicts the Statue of Liberty, a large statue located on Liberty Island in New York Harbor. The statue represents freedom and democracy and holds a torch in one hand and a tablet in the other. The backdrop features a cloudy sky, suggesting a scenic view.'}, 'logprobs': None, 'finish_reason': 'stop'}], 'usage': {'prompt_tokens': 25514, 'completion_tokens': 52, 'total_tokens': 25566}, 'system_fingerprint': 'fp_611b667b19'}\n"
+      "{'id': 'chatcmpl-9yIGskpRA2CGTGIySXoS1yk99SRn2', 'object': 'chat.completion', 'created': 1724156942, 'model': 'gpt-4o-mini-2024-07-18', 'choices': [{'index': 0, 'message': {'role': 'assistant', 'content': 'The image depicts the Statue of Liberty, a large statue symbolizing freedom and democracy, located on Liberty Island in New York Harbor. The statue is shown holding a torch in her right hand and a tablet in her left, with a scenic backdrop of clouds.', 'refusal': None}, 'logprobs': None, 'finish_reason': 'stop'}], 'usage': {'prompt_tokens': 25514, 'completion_tokens': 51, 'total_tokens': 25565}, 'system_fingerprint': 'fp_507c9469a1'}\n"
      ]
     }
    ],
@@ -167,7 +167,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
